examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
// E422: missing-effect list is deterministic and sorted.

fn run_needs_io_time(f: (() -> Int with IO, Time)) -> Int with IO, Time {
    f()
}

fn pure_worker() -> Int {
    0
}

fn main() with IO, Time {
    run_needs_io_time(pure_worker)
    print("done")
}
